adding slider image

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
               </div>
           </div>
     </div>
+
+    <div class="slider">
+        <img src="">
+    </div>
     
     <script src="main.js"></script>
 </body>
